# token-2022-parser

./: .gitignore  Cargo.toml  Makefile  readme.md
cli/: Cargo.toml
cli/src/: main.rs
sdk/: Cargo.toml
sdk/src/: token_utils.rs
